// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider controlled 1`] = `
Object {
  "12": "0.6666666666666667%",
}
`;

exports[`Slider controlled 2`] = `
Object {
  "10": "0%",
}
`;

exports[`Slider controlled 3`] = `
Object {
  "200": "35%",
}
`;

exports[`Slider controlled 4`] = `
Object {
  "210": "35.66666666666667%",
}
`;

exports[`Slider controlled 5`] = `
Object {
  "420": "53%",
}
`;

exports[`Slider controlled 6`] = `
Object {
  "1000": "100%",
}
`;

exports[`Slider controlled 7`] = `
Object {
  "1000": "100%",
}
`;

exports[`Slider isSensitive 1`] = `"input: 120, after press enter, value is: 120"`;

exports[`Slider isSensitive 2`] = `"input: 124, after press enter, value is: 120"`;

exports[`Slider isSensitive 3`] = `"input: 1001, after press enter, value is: 1000"`;

exports[`Slider isSensitive 4`] = `"input: 123, after press enter, value is: 120"`;

exports[`Slider isSensitive 5`] = `"input: 12, after press enter, value is: 12"`;

exports[`Slider isSensitive 6`] = `"input: 44, after press enter, value is: 44"`;

exports[`Slider isSensitive 7`] = `"input: 75, after press enter, value is: 75"`;

exports[`Slider isSensitive 8`] = `"input: 280, after press enter, value is: 280"`;

exports[`Slider isSensitive 9`] = `"input: 1000, after press enter, value is: 1000"`;

exports[`Slider isSensitive 10`] = `"input: asdsaad, after press enter, value is: 10"`;

exports[`Slider isSensitive 11`] = `"input: H#OI!*&, after press enter, value is: 10"`;

exports[`Slider isSensitive 12`] = `"input: 123, after press enter, value is: 120"`;

exports[`Slider isSensitive 13`] = `"input: , after press enter, value is: 10"`;

exports[`Slider isSensitive 14`] = `"input: 123, after press enter, value is: 120"`;

exports[`Slider isSensitive 15`] = `"input:    dsada   , after press enter, value is: 10"`;

exports[`Slider isSensitive 16`] = `"input: 14.12312312312, after press enter, value is: 14"`;

exports[`Slider isSensitive 17`] = `"input: 14.12312312312, after press enter, value is: 14"`;

exports[`Slider isSensitive 18`] = `"input: 13.12312312312, after press enter, value is: 13"`;

exports[`Slider isSensitive 19`] = `"input: 3.12312312312, after press enter, value is: 10"`;

exports[`Slider isSensitive 20`] = `"input: sdasdsa1231(*)@!, after press enter, value is: 10"`;

exports[`Slider isSensitive 21`] = `"input: 101001010, after press enter, value is: 1000"`;

exports[`Slider isSensitive 22`] = `"input: 999, after press enter, value is: 999"`;

exports[`Slider isSensitive 23`] = `"input: 950, after press enter, value is: 950"`;

exports[`Slider isSensitive 24`] = `"input: , after press enter, value is: 10"`;

exports[`Slider isSensitive 25`] = `"input:  dsadas --, after press enter, value is: 10"`;

exports[`Slider number input 1`] = `"input: 123, after press enter, value is: 120"`;

exports[`Slider number input 2`] = `"input: 124, after press enter, value is: 120"`;

exports[`Slider number input 3`] = `"input: 1001, after press enter, value is: 1000"`;

exports[`Slider number input 4`] = `"input: 123, after press enter, value is: 120"`;

exports[`Slider number input 5`] = `"input: 12, after press enter, value is: 12"`;

exports[`Slider number input 6`] = `"input: 44, after press enter, value is: 44"`;

exports[`Slider number input 7`] = `"input: 75, after press enter, value is: 75"`;

exports[`Slider number input 8`] = `"input: 280, after press enter, value is: 280"`;

exports[`Slider number input 9`] = `"input: 1000, after press enter, value is: 1000"`;

exports[`Slider number input 10`] = `"input: asdsaad, after press enter, value is: 10"`;

exports[`Slider number input 11`] = `"input: H#OI!*&, after press enter, value is: 10"`;

exports[`Slider number input 12`] = `"input: 123, after press enter, value is: 120"`;

exports[`Slider number input 13`] = `"input: , after press enter, value is: 10"`;

exports[`Slider number input 14`] = `"input: 123, after press enter, value is: 120"`;

exports[`Slider number input 15`] = `"input:    dsada   , after press enter, value is: 10"`;

exports[`Slider number input 16`] = `"input: 14.12312312312, after press enter, value is: 14"`;

exports[`Slider number input 17`] = `"input: 14.12312312312, after press enter, value is: 14"`;

exports[`Slider number input 18`] = `"input: 13.12312312312, after press enter, value is: 13"`;

exports[`Slider number input 19`] = `"input: 3.12312312312, after press enter, value is: 10"`;

exports[`Slider number input 20`] = `"input: sdasdsa1231(*)@!, after press enter, value is: 10"`;

exports[`Slider number input 21`] = `"input: 101001010, after press enter, value is: 1000"`;

exports[`Slider number input 22`] = `"input: 999, after press enter, value is: 999"`;

exports[`Slider number input 23`] = `"input: 950, after press enter, value is: 950"`;

exports[`Slider number input 24`] = `"input: , after press enter, value is: 10"`;

exports[`Slider number input 25`] = `"input:  dsadas --, after press enter, value is: 10"`;

exports[`Slider numberInputTipFormatter 1`] = `
<div
  class="style__SliderWrap-sc-1rsqtg6-1 ZBOFX"
>
  <div
    class="style__RcSliderWrap-sc-1rsqtg6-0 eMzAHv"
  >
    <div
      class="uc-fe-slider"
    >
      <div
        class="uc-fe-slider-rail"
      />
      <div
        class="uc-fe-slider-track"
        style="left: 0%; width: 0%;"
      />
      <div
        class="uc-fe-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="300"
        aria-valuemin="0"
        aria-valuenow="10"
        class="uc-fe-slider-handle"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
      <div
        class="uc-fe-slider-mark"
      />
    </div>
  </div>
  <div
    class="style__NumberInputWrap-mnip3j-4 uc-fe-numberinput uc-fe-numberinput-styletype-default hnoCaL"
  >
    <div>
      <span
        class="style__HandlerUp-mnip3j-2 uc-fe-numberinput-handler-up kCwAjK sc-bwzfXH uc-fe-numberinput-handler dUjajJ"
        unselectable="unselectable"
      >
        <i
          class="uc-fe-icon icon__caret-up style__IconWrap-sc-3eqdhz-0 xPAJB"
        />
      </span>
      <span
        class="style__HandlerDown-mnip3j-3 uc-fe-numberinput-handler-down bNRfrJ sc-bwzfXH uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled hjAcsF"
        disabled=""
        unselectable="unselectable"
      >
        <i
          class="uc-fe-icon icon__caret-down style__IconWrap-sc-3eqdhz-0 xPAJB"
        />
      </span>
    </div>
    <div
      class="style__InputWrap-mnip3j-0 uc-fe-numberinput-input-wrap bqNpJA"
    >
      <input
        autocomplete="off"
        class="style__Input-mnip3j-1 uc-fe-numberinput-input iFpoQR"
        max="1000"
        min="10"
        step="1"
        value="10"
      />
    </div>
  </div>
</div>
`;

exports[`Slider numberInputTipFormatter 2`] = `
<div
  class="style__SliderWrap-sc-1rsqtg6-1 ZBOFX"
>
  <div
    class="style__RcSliderWrap-sc-1rsqtg6-0 eMzAHv"
  >
    <div
      class="uc-fe-slider"
    >
      <div
        class="uc-fe-slider-rail"
      />
      <div
        class="uc-fe-slider-track"
        style="left: 0%; width: 0%;"
      />
      <div
        class="uc-fe-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="300"
        aria-valuemin="0"
        aria-valuenow="10"
        class="uc-fe-slider-handle"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
      <div
        class="uc-fe-slider-mark"
      />
    </div>
  </div>
  <div
    class="style__NumberInputWrap-mnip3j-4 uc-fe-numberinput uc-fe-numberinput-styletype-default uc-fe-numberinput-focused kqgIlc"
    style=""
  >
    <div>
      <span
        class="style__HandlerUp-mnip3j-2 uc-fe-numberinput-handler-up kCwAjK sc-bwzfXH uc-fe-numberinput-handler dUjajJ"
        unselectable="unselectable"
      >
        <i
          class="uc-fe-icon icon__caret-up style__IconWrap-sc-3eqdhz-0 xPAJB"
        />
      </span>
      <span
        class="style__HandlerDown-mnip3j-3 uc-fe-numberinput-handler-down bNRfrJ sc-bwzfXH uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled hjAcsF"
        disabled=""
        unselectable="unselectable"
      >
        <i
          class="uc-fe-icon icon__caret-down style__IconWrap-sc-3eqdhz-0 xPAJB"
        />
      </span>
    </div>
    <div
      class="style__InputWrap-mnip3j-0 uc-fe-numberinput-input-wrap bqNpJA"
    >
      <input
        autocomplete="off"
        class="style__Input-mnip3j-1 uc-fe-numberinput-input iFpoQR"
        max="1000"
        min="10"
        step="1"
        value="10"
      />
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="uc-fe-popover style__PopoverWrap-sc-1yqouou-0 bRVwjN uc-fe-tooltip-popup uc-fe-slider-tooltip uc-fe-popover-placement-top uc-fe-popover-animation-fade-appear"
        style="left: -999px; top: -1006px;"
      >
        <div>
          <div
            class="style__TooltipWrap-sc-1vhz6mi-3 gbHKRm"
          >
            <span
              class="style__Arrow-sc-1vhz6mi-1 jJwgzd"
            >
              <span
                class="style__ArrowInner-sc-1vhz6mi-2 dYGbyO"
              />
            </span>
            <div
              class="style__ContentWrap-sc-1vhz6mi-0 bzUuNw"
            >
              当前生效值为10，输入值为10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider numberInputTipFormatter 3`] = `
<div
  class="style__SliderWrap-sc-1rsqtg6-1 ZBOFX"
>
  <div
    class="style__RcSliderWrap-sc-1rsqtg6-0 eMzAHv"
  >
    <div
      class="uc-fe-slider"
    >
      <div
        class="uc-fe-slider-rail"
      />
      <div
        class="uc-fe-slider-track"
        style="left: 0%; width: 0%;"
      />
      <div
        class="uc-fe-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="300"
        aria-valuemin="0"
        aria-valuenow="10"
        class="uc-fe-slider-handle"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
      <div
        class="uc-fe-slider-mark"
      />
    </div>
  </div>
  <div
    class="style__NumberInputWrap-mnip3j-4 uc-fe-numberinput uc-fe-numberinput-styletype-default uc-fe-numberinput-focused kqgIlc"
    style=""
  >
    <div>
      <span
        class="style__HandlerUp-mnip3j-2 uc-fe-numberinput-handler-up kCwAjK sc-bwzfXH uc-fe-numberinput-handler dUjajJ"
        unselectable="unselectable"
      >
        <i
          class="uc-fe-icon icon__caret-up style__IconWrap-sc-3eqdhz-0 xPAJB"
        />
      </span>
      <span
        class="style__HandlerDown-mnip3j-3 uc-fe-numberinput-handler-down bNRfrJ sc-bwzfXH uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled hjAcsF"
        disabled=""
        unselectable="unselectable"
      >
        <i
          class="uc-fe-icon icon__caret-down style__IconWrap-sc-3eqdhz-0 xPAJB"
        />
      </span>
    </div>
    <div
      class="style__InputWrap-mnip3j-0 uc-fe-numberinput-input-wrap bqNpJA"
    >
      <input
        autocomplete="off"
        class="style__Input-mnip3j-1 uc-fe-numberinput-input iFpoQR"
        max="1000"
        min="10"
        step="1"
        value="10"
      />
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="uc-fe-popover style__PopoverWrap-sc-1yqouou-0 bRVwjN uc-fe-tooltip-popup uc-fe-slider-tooltip uc-fe-popover-placement-top uc-fe-popover-hidden"
        style="left: -999px; top: -1006px;"
      >
        <div>
          <div
            class="style__TooltipWrap-sc-1vhz6mi-3 gbHKRm"
          >
            <span
              class="style__Arrow-sc-1vhz6mi-1 jJwgzd"
            >
              <span
                class="style__ArrowInner-sc-1vhz6mi-2 dYGbyO"
              />
            </span>
            <div
              class="style__ContentWrap-sc-1vhz6mi-0 bzUuNw"
            >
              当前生效值为10，输入值为10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider numberInputTipFormatter 4`] = `
<div
  class="style__SliderWrap-sc-1rsqtg6-1 ZBOFX"
>
  <div
    class="style__RcSliderWrap-sc-1rsqtg6-0 eMzAHv"
  >
    <div
      class="uc-fe-slider"
    >
      <div
        class="uc-fe-slider-rail"
      />
      <div
        class="uc-fe-slider-track"
        style="left: 0%; width: 0%;"
      />
      <div
        class="uc-fe-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="300"
        aria-valuemin="0"
        aria-valuenow="10"
        class="uc-fe-slider-handle"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
      <div
        class="uc-fe-slider-mark"
      />
    </div>
  </div>
  <div
    class="style__NumberInputWrap-mnip3j-4 uc-fe-numberinput uc-fe-numberinput-styletype-default uc-fe-numberinput-focused kqgIlc"
    style=""
  >
    <div>
      <span
        class="style__HandlerUp-mnip3j-2 uc-fe-numberinput-handler-up kCwAjK sc-bwzfXH uc-fe-numberinput-handler dUjajJ"
        unselectable="unselectable"
      >
        <i
          class="uc-fe-icon icon__caret-up style__IconWrap-sc-3eqdhz-0 xPAJB"
        />
      </span>
      <span
        class="style__HandlerDown-mnip3j-3 uc-fe-numberinput-handler-down bNRfrJ sc-bwzfXH uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled hjAcsF"
        disabled=""
        unselectable="unselectable"
      >
        <i
          class="uc-fe-icon icon__caret-down style__IconWrap-sc-3eqdhz-0 xPAJB"
        />
      </span>
    </div>
    <div
      class="style__InputWrap-mnip3j-0 uc-fe-numberinput-input-wrap bqNpJA"
    >
      <input
        autocomplete="off"
        class="style__Input-mnip3j-1 uc-fe-numberinput-input iFpoQR"
        max="1000"
        min="10"
        step="1"
        value="10"
      />
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="uc-fe-popover style__PopoverWrap-sc-1yqouou-0 bRVwjN uc-fe-tooltip-popup uc-fe-slider-tooltip uc-fe-popover-placement-top uc-fe-popover-animation-fade-enter"
        style="left: -999px; top: -1006px;"
      >
        <div>
          <div
            class="style__TooltipWrap-sc-1vhz6mi-3 gbHKRm"
          >
            <span
              class="style__Arrow-sc-1vhz6mi-1 jJwgzd"
            >
              <span
                class="style__ArrowInner-sc-1vhz6mi-2 dYGbyO"
              />
            </span>
            <div
              class="style__ContentWrap-sc-1vhz6mi-0 bzUuNw"
            >
              <span>
                currentValue: 
                10
                inputValue: 
                10
                isSensitive: 
                undefined
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider numberInputTipFormatter 5`] = `
<div
  class="style__SliderWrap-sc-1rsqtg6-1 ZBOFX"
>
  <div
    class="style__RcSliderWrap-sc-1rsqtg6-0 eMzAHv"
  >
    <div
      class="uc-fe-slider"
    >
      <div
        class="uc-fe-slider-rail"
      />
      <div
        class="uc-fe-slider-track"
        style="left: 0%; width: 0%;"
      />
      <div
        class="uc-fe-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="300"
        aria-valuemin="0"
        aria-valuenow="10"
        class="uc-fe-slider-handle"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
      <div
        class="uc-fe-slider-mark"
      />
    </div>
  </div>
  <div
    class="style__NumberInputWrap-mnip3j-4 uc-fe-numberinput uc-fe-numberinput-styletype-default uc-fe-numberinput-focused kqgIlc"
    style=""
  >
    <div>
      <span
        class="style__HandlerUp-mnip3j-2 uc-fe-numberinput-handler-up kCwAjK sc-bwzfXH uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled hjAcsF"
        disabled=""
        unselectable="unselectable"
      >
        <i
          class="uc-fe-icon icon__caret-up style__IconWrap-sc-3eqdhz-0 xPAJB"
        />
      </span>
      <span
        class="style__HandlerDown-mnip3j-3 uc-fe-numberinput-handler-down bNRfrJ sc-bwzfXH uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled hjAcsF"
        disabled=""
        unselectable="unselectable"
      >
        <i
          class="uc-fe-icon icon__caret-down style__IconWrap-sc-3eqdhz-0 xPAJB"
        />
      </span>
    </div>
    <div
      class="style__InputWrap-mnip3j-0 uc-fe-numberinput-input-wrap bqNpJA"
    >
      <input
        autocomplete="off"
        class="style__Input-mnip3j-1 uc-fe-numberinput-input iFpoQR"
        max="1000"
        min="10"
        step="1"
        value="asdasd"
      />
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="uc-fe-popover style__PopoverWrap-sc-1yqouou-0 bRVwjN uc-fe-tooltip-popup uc-fe-slider-tooltip uc-fe-popover-placement-top"
        style="left: -999px; top: -1006px;"
      >
        <div>
          <div
            class="style__TooltipWrap-sc-1vhz6mi-3 gbHKRm"
          >
            <span
              class="style__Arrow-sc-1vhz6mi-1 jJwgzd"
            >
              <span
                class="style__ArrowInner-sc-1vhz6mi-2 dYGbyO"
              />
            </span>
            <div
              class="style__ContentWrap-sc-1vhz6mi-0 bzUuNw"
            >
              <span>
                currentValue: 
                10
                inputValue: 
                asdasd
                isSensitive: 
                undefined
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider numberInputTipFormatter 6`] = `
<div
  class="style__SliderWrap-sc-1rsqtg6-1 ZBOFX"
>
  <div
    class="style__RcSliderWrap-sc-1rsqtg6-0 eMzAHv"
  >
    <div
      class="uc-fe-slider"
    >
      <div
        class="uc-fe-slider-rail"
      />
      <div
        class="uc-fe-slider-track"
        style="left: 0%; width: 0%;"
      />
      <div
        class="uc-fe-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="300"
        aria-valuemin="0"
        aria-valuenow="10"
        class="uc-fe-slider-handle"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
      <div
        class="uc-fe-slider-mark"
      />
    </div>
  </div>
  <div
    class="style__NumberInputWrap-mnip3j-4 uc-fe-numberinput uc-fe-numberinput-styletype-default uc-fe-numberinput-focused kqgIlc"
    style=""
  >
    <div>
      <span
        class="style__HandlerUp-mnip3j-2 uc-fe-numberinput-handler-up kCwAjK sc-bwzfXH uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled hjAcsF"
        disabled=""
        unselectable="unselectable"
      >
        <i
          class="uc-fe-icon icon__caret-up style__IconWrap-sc-3eqdhz-0 xPAJB"
        />
      </span>
      <span
        class="style__HandlerDown-mnip3j-3 uc-fe-numberinput-handler-down bNRfrJ sc-bwzfXH uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled hjAcsF"
        disabled=""
        unselectable="unselectable"
      >
        <i
          class="uc-fe-icon icon__caret-down style__IconWrap-sc-3eqdhz-0 xPAJB"
        />
      </span>
    </div>
    <div
      class="style__InputWrap-mnip3j-0 uc-fe-numberinput-input-wrap bqNpJA"
    >
      <input
        autocomplete="off"
        class="style__Input-mnip3j-1 uc-fe-numberinput-input iFpoQR"
        max="1000"
        min="10"
        step="1"
        value="asdasd"
      />
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="uc-fe-popover style__PopoverWrap-sc-1yqouou-0 bRVwjN uc-fe-tooltip-popup uc-fe-slider-tooltip uc-fe-popover-placement-top"
        style="left: -999px; top: -1006px;"
      >
        <div>
          <div
            class="style__TooltipWrap-sc-1vhz6mi-3 gbHKRm"
          >
            <span
              class="style__Arrow-sc-1vhz6mi-1 jJwgzd"
            >
              <span
                class="style__ArrowInner-sc-1vhz6mi-2 dYGbyO"
              />
            </span>
            <div
              class="style__ContentWrap-sc-1vhz6mi-0 bzUuNw"
            >
              <span>
                currentValue: 
                10
                inputValue: 
                asdasd
                isSensitive: 
                true
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider onLastChange 1`] = `"input: 13.12312312312, after press enter, value is: 13"`;

exports[`Slider onLastChange 2`] = `"input: 3.12312312312, after press enter, value is: 10"`;

exports[`Slider onLastChange 3`] = `"input: sdasdsa1231(*)@!, after press enter, value is: 10"`;

exports[`Slider onLastChange 4`] = `"input: 101001010, after press enter, value is: 1000"`;

exports[`Slider onLastChange 5`] = `"input: 999, after press enter, value is: 999"`;

exports[`Slider onLastChange 6`] = `"input: 950, after press enter, value is: 950"`;

exports[`Slider onLastChange 7`] = `"input: , after press enter, value is: 10"`;

exports[`Slider onLastChange 8`] = `"input:  dsadas --, after press enter, value is: 10"`;

exports[`Slider uncontrolled 1`] = `
Object {
  "12": "0.6666666666666667%",
}
`;

exports[`Slider uncontrolled 2`] = `
Object {
  "24": "3.6666666666666665%",
}
`;

exports[`Slider uncontrolled 3`] = `
Object {
  "1000": "100%",
}
`;

exports[`Slider uncontrolled 4`] = `
Object {
  "100": "20%",
}
`;

exports[`Slider uncontrolled 5`] = `
Object {
  "24": "3.6666666666666665%",
}
`;
